[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
cyancia_graph = { version = "0.1.0", path = "crates/cyancia_graph" }
cyancia_utils = { version = "0.1.0", path = "crates/cyancia_utils" }
cyancia_utils_derive = { version = "0.1.0", path = "crates/cyancia_utils_derive" }
cyancia_widgets = { version = "0.1.0", path = "crates/cyancia_widgets" }
cyancia_input = { version = "0.1.0", path = "crates/cyancia_input" }
cyancia_assets = { version = "0.1.0", path = "crates/cyancia_assets" }
cyancia_canvas = { version = "0.1.0", path = "crates/cyancia_canvas" }
cyancia_id = { version = "0.1.0", path = "crates/cyancia_id" }
cyancia_tools = { version = "0.1.0", path = "crates/cyancia_tools" }
cyancia_image = { version = "0.1.0", path = "crates/cyancia_image" }
cyancia_render = { version = "0.1.0", path = "crates/cyancia_render" }
cyancia_math = { version = "0.1.0", path = "crates/cyancia_math" }
cyancia_actions = { version = "0.1.0", path = "crates/cyancia_actions" }

iced = { version = "0.14", features = [
    "debug",
    "canvas",
], git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_beacon = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_core = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_debug = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_devtools = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_futures = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_graphics = { version = "0.14", features = [
    "geometry",
], git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_highlighter = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_program = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_renderer = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_runtime = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_selector = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_wgpu = { version = "0.14", features = [
    "geometry",
], git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_widget = { version = "0.14", features = [
    "wgpu",
], git = "https://github.com/443eb9/iced.git", branch = "0.14" }
iced_winit = { version = "0.14", git = "https://github.com/443eb9/iced.git", branch = "0.14" }
uuid = { version = "1", features = ["v4", "serde"] }
syn = "2"
quote = "1"
proc-macro2 = "1"
thiserror = "2"
num-traits = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
smallvec = "1"
toml = "0.9"
log = "0.4"
downcast-rs = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = "2"
parking_lot = "0.12"
futures = "0.3"
bitflags = "2"
wgpu = "27"
glam = { version = "0.30", features = ["encase"] }
dashmap = "6"
wesl = { version = "0.3", features = ["package"] }
encase = "0.12"
bytemuck = "1"
image = "0.25"
palette = "0.7"
rayon = "1"
half = "2"
rfd = "0.16"
